# DARE

./: .gitignore  README.md
comparing_storage/: create_iceberg_r2_spark.py  create_iceberg_s3.py  create_iceberg_s3_to_r2.py  create_iceberg_std_to_s3tables.py  create_manifest.py  migrate_iceberg_s3_to_r2.py  migrate_iceberg_std_to_s3tables.py  run_emr_job.sh  setup_r2_migration.py
comparing_storage/r2/: clean_r2_bucket.py  convert_parquet_to_iceberg_pyiceberg.py  create_iceberg_r2_catalog.py  create_iceberg_r2_duckdb.py  create_parquet_r2_duckdb.py  create_table_in_r2_catalog.py  delete_table.py  download_iceberg_jars.sh  migrate_iceberg_s3_to_r2.py  query_r2_with_duckdb.py  register_migrated_table_r2_catalog.py  unified_migration_r2_catalog_native.py  verify_r2_migration.py
extract_load_testing/: main.go  polars_etl.py  spark_etl.py
extract_load_testing/csharp_el/: Program.cs  csharp_etl.csproj
extract_load_testing/go_el/: go.mod  go.sum  main.go
extract_load_testing/rust_el/: Cargo.toml
extract_load_testing/rust_el/src/: main.rs
mcp_server/: r2_server.py  sf_server.py
