[package]
name = "rust_etl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.5.0"
aws-sdk-s3 = "1.39.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
csv = "1.3"
parquet = "50.0.0"
arrow-schema = "50.0.0"
arrow-array = "50.0.0"
bytes = "1.5"
regex = "1.10"
chrono = { version = "0.4", features = ["std"] }
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
num_cpus = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
rayon = "1.10.0" 